--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ dist/
 build/
 *.egg-info/
 
-# IDE and editor files
+# IDE/Editor
 .idea/
 .vscode/
 *.swp
@@ -27,12 +27,14 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+*.log
 
 # Testing
 coverage/
 .pytest_cache/
 
 # Misc
+.DS_Store
 *.bak
-*.tmp
-*.temp 
+*.tmp 
